CSS override fix for overlaping donate buttons

--- a/Funds4Kids/Content/common.css
+++ b/Funds4Kids/Content/common.css
@@ -25,6 +25,8 @@ body {
 
 .donate-button {
     padding-top: 5% !important;
+    line-height: 125px;
+    font-size: 150% !important;
 }
 
 /************************************************************************************************/
